--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/Compiler.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.autocomplete.jar=autocomplete.jar
 file.reference.kotlin-runtime.jar=C:\\Users\\lenovo G50-80\\AppData\\Roaming\\NetBeans\\8.2\\kotlinc\\lib\\kotlin-runtime.jar
+file.reference.rsyntaxtextarea-1.0.jar=rsyntaxtextarea-1.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.rsyntaxtextarea-1.0.jar}:\
+    ${file.reference.autocomplete.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
